--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,14 +6,13 @@
     <string name="action_settings">Settings</string>
     <string name="home">Home</string>
     <string name="OTA">OTA</string>
-    
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="changelog_title">Changelog</string>
     <string name="updates_title">Updates</string>
     <string name="no_additional_info">No additional information</string>
     <string name="check_for_updates">Check</string>
-    
+
     <!-- SYSTEM ACTIVITY -->
     <string name="check_for_updates_long">Check for updates</string>
     <string name="all_up_to_date">You\'re up to date!</string>
@@ -114,7 +113,7 @@
     <string name="error_device_not_found_title">Device not found</string>
     <string name="error_device_not_found_summary">A ROM for your device was not found. Please check manually.</string>
     <string name="error_device_not_found_server">A ROM for your device was not found.</string>
-    
+
     <!-- SETTINGS -->
     <string name="settings">Settings</string>
     <string name="settings_checktime_title">Update check frequency</string>
@@ -123,7 +122,6 @@
     <string name="settings_checkgapps_summary">Check also for PA specific Google apps</string>
     <string name="settings_gappstype_title">Google apps type</string>
     <string name="settings_gappstype_summary">Choose between full, mini, micro and stock gapps package</string>
-
     <string name="settings_deviceselect_title">[Advanced] Allow Select Device</string>
     <string name="settings_deviceselect_summary">Select device to test OTA</string>
     <string name="gapps_type_full">Full package</string>
@@ -146,5 +144,6 @@
     <string name="error_logging_invalid">Invalid username/password</string>
     <string name="error_logging_down">Unable to reach server</string>
     <string name="error_logging_in">Unknown error logging in</string>
+    <string name="title_activity_setup_wizard">SetupWizardActivity</string>
 
 </resources>
