Add refresh button for notices
Change-Id: I28c4619f88226f55315ffcf8d51e0badfdcf4cd9

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <!-- Notices -->
     <string name="notice_empty">There is currently no notices.</string>
+    <string name="action_refresh">Refresh</string>
 
     <!-- Config -->
     <string name="config">Configuration</string>
