Add backslash to string

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="halolabel">Halo: </string>
     <string name="halodesc">A super-nifty notification center extension. With halo, you can check your notifications without taking up your whole screen</string>
     <string name="cardviewlabel">Card View: </string>
-    <string name="cardviewdesc">A quick and easy toggle for AOSPA's new card view</string>
+    <string name="cardviewdesc">A quick and easy toggle for AOSPA\'s new card view</string>
     <string name="wifinotilabel">WiFi Notifications: </string>
     <string name="wifinotidesc">Get an alert every time you connect to wifi</string>
     <string name="wifinotidisabled">Disabled</string>
