Add new config for double tap navbar to sleep
Change-Id: I7a0f89d10edbf12f563acaa5a9b550d0263f98d2

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="wifinotinotification">Notification</string>
     <string name="wifinotinotificationsound">Notification with Sound</string>
     <string name="doubletapstatuslabel">Double Tap Statusbar to Sleep: </string>
+    <string name="doubletapnavlabel">Double Tap Navbar to Sleep: </string>
     <string name="doubletapdesc">Double tap your status bar to quickly put your device to sleep</string>
 
     <!-- SYSTEM ACTIVITY -->
