--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,26 @@
     <string name="performancedesc">A special init.d mod that optimizes the kernel. [Disable if using other kernel mods that interfere with governors]</string>
     <string name="halolabel">Halo: </string>
     <string name="halodesc">A super-nifty notification center extension. With halo, you can check your notifications without taking up your whole screen</string>
+    <string name="halo_state_black">Blacklist</string>
+    <string name="halo_state_white">Whitelist</string>
+    <string name="halo_size_miniscule">Miniscule</string>
+    <string name="halo_size_small">Small</string>
+    <string name="halo_size_default">Default</string>
+    <string name="halo_size_large">Large</string>
+    <string name="halo_size_gigantic">Gigantic</string>
+    <string name="halo_size_monster">Monster</string>
+    <string name="halo_notification_count_none">None</string>
+    <string name="halo_notification_count_total">Total</string>
+    <string name="halo_notification_count_individual">Per-app</string>
+    <string name="halo_notification_count_both">Both</string>
+    <string name="halo_label_tv">Enable Halo</string>
+    <string name="halo_state_tv">Halo policy</string>
+    <string name="halo_hide_tv">Ninja mode</string>
+    <string name="halo_size_tv">Halo size</string>
+    <string name="halo_pause_tv">Pause underlying app</string>
+    <string name="halo_msgbox_tv">Show notification text</string>
+    <string name="halo_notify_count_tv">Notification counter type</string>
+    <string name="halo_unlock_ping_tv">Ping new notifications on unlock</string>
     <string name="cardviewlabel">Card View: </string>
     <string name="cardviewdesc">A quick and easy toggle for AOSPA\'s new card view</string>
     <string name="wifinotilabel">WiFi Notifications: </string>
